# 03_02_Perm_missing_elem

./: CMakeLists.txt  README.md  main.c
